crates/rowan/tests/snapshots/smoke__parse_valid_definitions___include_str_testdata_valid_module_example_d_rhai_-2.snap
---
source: crates/rowan/tests/smoke.rs
expression: "format!(\"{:#?}\", parse.into_syntax())"

---
RHAI_DEF@0..434
  COMMENT_LINE@0..66 "// This file declares ..."
  WHITESPACE@66..67 "\n"
  COMMENT_LINE@67..69 "//"
  WHITESPACE@69..70 "\n"
  COMMENT_LINE@70..173 "// The path to the rh ..."
  WHITESPACE@173..174 "\n"
  COMMENT_LINE@174..264 "// where `module-file ..."
  WHITESPACE@264..265 "\n"
  COMMENT_LINE@265..267 "//"
  WHITESPACE@267..268 "\n"
  COMMENT_LINE@268..338 "// The items defined  ..."
  WHITESPACE@338..339 "\n"
  COMMENT_LINE@339..341 "//"
  WHITESPACE@341..342 "\n"
  COMMENT_LINE@342..381 "// Cannot contain ope ..."
  WHITESPACE@381..382 "\n"
  DEF_STMT@382..408
    DEF_ITEM@382..407
      DEF@382..407
        DEF_MODULE@382..407
          KW_MODULE@382..388 "module"
          WHITESPACE@388..389 " "
          LIT_STR@389..407 "\"./module-example\""
    PUNCT_SEMI@407..408 ";"
  WHITESPACE@408..410 "\n\n"
  DEF_STMT@410..433
    DEF_ITEM@410..432
      DEF@410..432
        DEF_FN@410..432
          KW_FN@410..412 "fn"
          WHITESPACE@412..413 " "
          IDENT@413..418 "hello"
          TYPED_PARAM_LIST@418..432
            PUNCT_PAREN_START@418..419 "("
            TYPED_PARAM@419..431
              IDENT@419..423 "name"
              PUNCT_COLON@423..424 ":"
              TYPE@424..431
                WHITESPACE@424..425 " "
                TYPE_IDENT@425..431
                  IDENT@425..431 "string"
            PUNCT_PAREN_END@431..432 ")"
    PUNCT_SEMI@432..433 ";"
  WHITESPACE@433..434 "\n"

