crates/rowan/tests/snapshots/smoke__parse_valid_definitions___include_str_testdata_valid_module_global_d_rhai_.snap
---
source: crates/rowan/tests/smoke.rs
expression: "format!(\"{:#?}\", parse.into_syntax())"

---
RHAI_DEF@0..272
  COMMENT_LINE@0..75 "// This module extend ..."
  WHITESPACE@75..76 "\n"
  COMMENT_LINE@76..147 "// Any module can be  ..."
  WHITESPACE@147..148 "\n"
  COMMENT_LINE@148..150 "//"
  WHITESPACE@150..151 "\n"
  COMMENT_LINE@151..209 "// All definitions ar ..."
  WHITESPACE@209..210 "\n"
  COMMENT_LINE@210..212 "//"
  WHITESPACE@212..213 "\n"
  COMMENT_LINE@213..252 "// Cannot contain ope ..."
  WHITESPACE@252..253 "\n"
  DEF_STMT@253..270
    DEF_ITEM@253..269
      DEF@253..269
        DEF_MODULE@253..269
          KW_MODULE@253..259 "module"
          WHITESPACE@259..260 " "
          IDENT@260..269 "my_module"
    PUNCT_SEMI@269..270 ";"
  WHITESPACE@270..272 "\n\n"

